--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\MenuController.cs" />
     <Compile Include="Views\FormClientCreate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,7 +182,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="Repository\" />
