--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -66,35 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\MenuController.cs" />
-    <Compile Include="Views\FormClientCreate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormClientCreate.Designer.cs">
-      <DependentUpon>FormClientCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\FormClientUpdate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormClientUpdate.Designer.cs">
-      <DependentUpon>FormClientUpdate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\FormInvoiceCreate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormInvoiceCreate.Designer.cs">
-      <DependentUpon>FormInvoiceCreate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Views\FormInvoiceList.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\FormInvoiceList.Designer.cs">
       <DependentUpon>FormInvoiceList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\FormInvoiceUpdate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormInvoiceUpdate.Designer.cs">
-      <DependentUpon>FormInvoiceUpdate.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\FormMenu.cs">
       <SubType>Form</SubType>
@@ -108,40 +84,22 @@
     <Compile Include="Views\FormClientList.Designer.cs">
       <DependentUpon>FormClientList.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\FormProductCreate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormProductCreate.Designer.cs">
-      <DependentUpon>FormProductCreate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Views\FormProductList.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\FormProductList.Designer.cs">
       <DependentUpon>FormProductList.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\FormProductUpdate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\FormProductUpdate.Designer.cs">
-      <DependentUpon>FormProductUpdate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Views\FormClientCreate.resx">
-      <DependentUpon>FormClientCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\FormClientUpdate.resx">
-      <DependentUpon>FormClientUpdate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\FormInvoiceCreate.resx">
-      <DependentUpon>FormInvoiceCreate.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="Views\FormProfil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormProfil.Designer.cs">
+      <DependentUpon>FormProfil.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\FormInvoiceList.resx">
       <DependentUpon>FormInvoiceList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\FormInvoiceUpdate.resx">
-      <DependentUpon>FormInvoiceUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
@@ -149,14 +107,8 @@
     <EmbeddedResource Include="Views\FormClientList.resx">
       <DependentUpon>FormClientList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\FormProductCreate.resx">
-      <DependentUpon>FormProductCreate.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormProductList.resx">
       <DependentUpon>FormProductList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\FormProductUpdate.resx">
-      <DependentUpon>FormProductUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -167,6 +119,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FormProfil.resx">
+      <DependentUpon>FormProfil.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
