--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Views\FormProfil.Designer.cs">
       <DependentUpon>FormProfil.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Invoiceline.cs" />
     <Compile Include="Views\Moral.cs" />
     <Compile Include="Views\Physical.cs" />
     <Compile Include="Views\Product.cs" />
