--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Views\Moral.cs" />
     <Compile Include="Views\Physical.cs" />
     <Compile Include="Views\Product.cs" />
+    <Compile Include="Views\Profil.cs" />
     <Compile Include="Views\Quote.cs" />
     <Compile Include="Views\Status.cs" />
     <Compile Include="Views\Type.cs" />
