--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -66,9 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Controllers\ProfilController.cs" />
     <Compile Include="Models\DbConnect.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Repository\ProfilRepository.cs" />
     <Compile Include="Views\FormClientCreate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -176,7 +178,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
