--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -65,11 +65,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\ProfilController.cs" />
     <Compile Include="Models\DbConnect.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\ProfilRepository.cs" />
     <Compile Include="Views\FormClientCreate.cs">
       <SubType>Form</SubType>
