--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -72,9 +73,17 @@
     <Compile Include="Models\DbConnect.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Invoice.cs" />
+    <Compile Include="Repository\InvoiceRepository.cs" />
     <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\ProfilRepository.cs" />
+    <Compile Include="Views\FormInvoiceCreate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormInvoiceCreate.Designer.cs">
+      <DependentUpon>FormInvoiceCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormClientCreate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FormClientUpdate.resx">
       <DependentUpon>FormClientUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FormInvoiceCreate.resx">
+      <DependentUpon>FormInvoiceCreate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FormInvoiceList.resx">
       <DependentUpon>FormInvoiceList.cs</DependentUpon>
