--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -128,6 +128,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FormProductUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormProductUpdate.Designer.cs">
+      <DependentUpon>FormProductUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormProfil.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +187,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FormProductUpdate.resx">
+      <DependentUpon>FormProductUpdate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormProfil.resx">
       <DependentUpon>FormProfil.cs</DependentUpon>
     </EmbeddedResource>
