--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\ProfilRepository.cs" />
+    <Compile Include="Views\FormInvoiceDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormInvoiceDetail.Designer.cs">
+      <DependentUpon>FormInvoiceDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormInvoiceUpdate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,9 @@
     <Compile Include="Models\Quote.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Type.cs" />
+    <EmbeddedResource Include="Views\FormInvoiceDetail.resx">
+      <DependentUpon>FormInvoiceDetail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormInvoiceUpdate.resx">
       <DependentUpon>FormInvoiceUpdate.cs</DependentUpon>
     </EmbeddedResource>
