--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Repository\CustomerRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\ProfilRepository.cs" />
+    <Compile Include="Views\FormInvoicelineCreate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormInvoicelineCreate.Designer.cs">
+      <DependentUpon>FormInvoicelineCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormInvoiceDetail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +176,9 @@
     <Compile Include="Models\Quote.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Type.cs" />
+    <EmbeddedResource Include="Views\FormInvoicelineCreate.resx">
+      <DependentUpon>FormInvoicelineCreate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormInvoiceDetail.resx">
       <DependentUpon>FormInvoiceDetail.cs</DependentUpon>
     </EmbeddedResource>
