--- a/AutoFact2.csproj
+++ b/AutoFact2.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.117.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>packages\System.Data.SQLite.Linq.1.0.117.0\lib\net46\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Windows.Forms.DataVisualization.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -188,6 +190,12 @@
     <Compile Include="Models\Quote.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Type.cs" />
+    <Compile Include="Views\FormStats.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormStats.Designer.cs">
+      <DependentUpon>FormStats.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\FormInvoicelineCreate.resx">
       <DependentUpon>FormInvoicelineCreate.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,6 +249,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FormProfilUpdate.resx">
       <DependentUpon>FormProfilUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FormStats.resx">
+      <DependentUpon>FormStats.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
